passed the file path
I passed the file path as an environment variable, removing the need to hard-code it.